# cosine_sim_analysis

./: LICENSE  README.md  pyproject.toml
notebooks/: math_runthrough.ipynb  rd1.ipynb  rd2.ipynb  rd3.ipynb
notebooks/bert/: another_example.ipynb  another_example2.ipynb  basic_scaling_effects_BERT.ipynb  custom_embedding_model.ipynb  final.ipynb  final1.ipynb  final2_deep.ipynb  random_scaling_music_BERT.ipynb  regularized_embedding_model.ipynb
